# plexr

./: Cargo.toml  LICENSE  README.md
src/: layout.rs  main.rs  platform.rs  terminal.rs  tests.rs  ui.rs
