[package]
name = "plexr"
version = "0.1.0"
edition = "2024"
description = "A mouse-first terminal session multiplexer"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
crossterm = "0.29"
libc = "0.2"
portable-pty = "0.9"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vt100 = "0.16"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
